# CS-414

./: .gitignore  README.md
Assignment01/: README.md  assignment01.opam  dune-project
Assignment01/lib/: btree.ml  dune  gtree.ml  nat.ml
Assignment01/src/: dune  treedemo.ml
Assignment01/test/: dune  test_treedemo.ml
Assignment01/tree/: dune  tree.ml
Assignment02/: answers.txt  regex_tests.py  rose.ml  test.ml
Assignment03/: README.md  run_tests.sh  shell_parser.py  tests.txt
Assignment04/: README.md  run_tests.sh  shell_parser_vars.py  tests.txt
Assignment04/documents/: contours.md
Assignment06/: monads.cpp  monads.ml  report.md
Assignment06/ocaml/: monads.ml
_build/: .db  .digest-db  log
_build/default/: assignment01.dune-package  assignment01.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: assignment01.cma  assignment01.cmxa  assignment01.cmxs  assignment01.ml-gen  gtree.ml
_build/default/lib/.assignment01.objs/: assignment01__Btree.impl.d  assignment01__Gtree.impl.d  assignment01__Nat.impl.d
_build/default/lib/.assignment01.objs/byte/: assignment01.cmi  assignment01.cmo  assignment01.cmt  assignment01__Btree.cmi  assignment01__Btree.cmo  assignment01__Btree.cmt  assignment01__Gtree.cmi  assignment01__Gtree.cmo  assignment01__Gtree.cmt  (+3 more)
_build/default/lib/.merlin-conf/: lib-assignment01
_build/default/test/.merlin-conf/: exe-test_assignment01
assignment 5/: Question 2 zipper_list.ml  Question 2 zipper_test.ml  Readme  question1_bst_variant.cpp
assignment01/lib/: btree.ml  nat.ml
test/: dune
(+10 files in other folders)
