opam-version: "2.0"
synopsis: "Assignment 01 for CS 414"
description: """
Peano arithmetic, binary tree traversals, and general tree functions in OCaml.
"""
maintainer: ["daleheck37@gmail.com"]
authors: ["Logan Heck"]
license: "MIT"
depends: [
  "ocaml"
  "dune" {>= "3.16"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
